--- a/src/app/@layouts/layout-auth/layout-auth.component.html
+++ b/src/app/@layouts/layout-auth/layout-auth.component.html
@@ -1,1 +1,43 @@
-<p>layout-auth works!</p>
+<td-layout class="layout-card-over-demo"
+           sidenavWidth="280px">
+  <!--<td-navigation-drawer
+    flex
+    sidenavTitle="Covalent"
+    logo="teradata-dark"
+    name="Firstname Lastname"
+    email="firstname.lastname@company.com">
+    <mat-nav-list>
+      <a mat-list-item>
+        <mat-icon>home</mat-icon>
+        Home
+      </a>
+      <a mat-list-item
+         tdLayoutToggle>
+        <mat-icon>close</mat-icon>
+        Close Drawer
+      </a>
+    </mat-nav-list>
+    <div td-navigation-drawer-menu>
+      <mat-nav-list>
+        <a mat-list-item>
+          <mat-icon>account_box</mat-icon>
+          Profile
+        </a>
+      </mat-nav-list>
+    </div>
+  </td-navigation-drawer>-->
+  <td-layout-nav
+    logo="assets:clipsalud-b"
+    toolbarTitle="Covalent"
+    navigationRoute="/auth">
+    <!--<button mat-icon-button
+            td-menu-button
+            tdLayoutToggle>
+      <mat-icon>menu</mat-icon>
+    </button>-->
+    <td-layout-card-over
+      cardWidth="30">
+      <router-outlet></router-outlet>
+    </td-layout-card-over>
+  </td-layout-nav>
+</td-layout>
